0111 added models and superuser

--- a/LittleLemonAPI/templates/0111_final_proj_notes.html
+++ b/LittleLemonAPI/templates/0111_final_proj_notes.html
@@ -14,7 +14,12 @@
     <h2><i>0111 django final project demo1</i></h2>
     <p>
         app is called ->  LittleLemonAPI <br>
-
+    </p>
+    <p>
+        ___#0111 admin site login info: <br>-------------------<br>
+        user -> admin111 <br>
+        password -> sav$-HK4 <br>
+        email -> admin111@example.com <br>
     </p>
 </body>
 </html>
