0112 added some notes

--- a/LittleLemonAPI/templates/0111_final_proj_notes.html
+++ b/LittleLemonAPI/templates/0111_final_proj_notes.html
@@ -21,5 +21,10 @@
         password -> sav$-HK4 <br>
         email -> admin111@example.com <br>
     </p>
+    <p>
+        __#0112 to show dependancy tree for packages have on pipenv <br>---------------------<br>
+        >> pipenv graph <br>
+        <br>
+    </p>
 </body>
 </html>
