0112 save some notes

--- a/LittleLemonAPI/templates/0111_final_proj_notes.html
+++ b/LittleLemonAPI/templates/0111_final_proj_notes.html
@@ -14,6 +14,16 @@
     <h2><i>0111 django final project demo1</i></h2>
     <p>
         app is called ->  LittleLemonAPI <br>
+        <br>
+        <br>
+        to install simplejwt <br>---------------<br>
+        >> pipenv install djangorestframework-simplejwt
+        <br>
+        <br>
+        __#ex2 on pycharm packages <br>
+        >> djangorestframework-simplejwt   <br>
+        <br>
+        <br>
     </p>
     <p>
         ___#0111 admin site login info: <br>-------------------<br>
