--- a/LittleLemonAPI/templates/0112_auth_endpoints_ordering_filtering.html
+++ b/LittleLemonAPI/templates/0112_auth_endpoints_ordering_filtering.html
@@ -20,6 +20,12 @@
         __# install on pipenv<br>
         2- pipenv install djangorestframework-simplejwt~=5.2.1 <br>
         <br>
+        <br>
+        <br>
+        ___#0112 note:  if pycharm is still showing red lines on from statement <br>
+        goto pycharm packages > and search <br>>> djangorestframework-simplejwt <br>
+        <br>
+        <br>
 
     </p>
     <p>
@@ -64,6 +70,8 @@
         | ...... 'rest_framework.filters.OrderingFilter', <br>
         | ...... 'rest_framework.filters.SearchFilter', <br>
         | .. ], <br>
+        | .. 'DEFAULT_PAGINATION_CLASS': 'rest_framework.pagination.PageNumberPagination', <br>
+        | .. 'PAGE_SIZE': 2 <br>
 
 
         } <br>
