0112 installed djoser ext

--- a/LittleLemonAPI/templates/0111_final_proj_notes.html
+++ b/LittleLemonAPI/templates/0111_final_proj_notes.html
@@ -36,5 +36,24 @@
         >> pipenv graph <br>
         <br>
     </p>
+    <p>
+        w3 intro to djoser library for better authentication <br>
+        list of djoser endpoints <br>
+        /users/ <br>
+        /users/me <br>
+        /users/confirm/ <br>
+        /users/resend_activation <br>
+        /users/set_password/ <br>
+        /users/set_password_confirm/ <br>
+        /users/set_username/ <br>
+        /users/reset_username/ <br>
+        /users/reset_username_confirm/ <br>
+        /token/login/ <br>
+        /token/logout/ <br>
+        <br>
+        <br>
+        ____# access these urls with:<br>
+        >> http://127.0.0.1:8000/auth
+    </p>
 </body>
 </html>
