--- a/LittleLemonAPI/templates/0111_final_proj_notes.html
+++ b/LittleLemonAPI/templates/0111_final_proj_notes.html
@@ -55,5 +55,55 @@
         ____# access these urls with:<br>
         >> http://127.0.0.1:8000/auth
     </p>
+    <p>
+        Grading criteria: <br>--------------------# admin <br>
+1.  The admin can assign users to the manager group <br>
+<br>
+2.	You can access the manager group with an admin token <br>
+<br>
+3.	The admin can add menu items <br>
+<br>
+4.	The admin can add categories <br>
+<br>
+______# managers <br>
+5.	Managers can log in <br>
+<br>
+6.	Managers can update the item of the day <br>
+<br>
+7.	Managers can assign users to the delivery crew <br>
+<br>
+8.	Managers can assign orders to the delivery crew <br>
+        <br>
+______# delivery crew <br>
+9.	The delivery crew can access orders assigned to them <br>
+ <br>
+10.	The delivery crew can update an order as delivered <br>
+<br>
+______# customers <br>
+11.	Customers can register <br>
+<br>
+12.	Customers can log in using their username and password and get access tokens <br>
+<br>
+13.	Customers can browse all categories <br>
+<br>
+14.	Customers can browse all the menu items at once <br>
+<br>
+15.	Customers can browse menu items by category <br>
+<br>
+16.	Customers can paginate menu items <br>
+<br>
+17.	Customers can sort menu items by price <br>
+<br>
+18.	Customers can add menu items to the cart <br>
+<br>
+19.	Customers can access previously added items in the cart <br>
+<br>
+20.	Customers can place orders <br>
+<br>
+21.	Customers can browse their own orders <br>
+<br>
+    </p>
+
+
 </body>
 </html>
